--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "expo-server-sdk": "^3.6.0",
-    "express": "^4.18.1",
-    "mongoose": "^6.4.1"
+    "express": "^4.18.1"
   }
 }
